# COD

./: .gitignore  BENCHMARK.md  CHANGES.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  REMAINING.md  SECURITY.md  benchmark_editors.py  eslint.config.js  package-lock.json  package.json  product.json
.devcontainer/: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  ci_cd_issue.md  config.yml  design_proposal.md  documentation.md  feature_request.md  performance_issue.md  refactoring.md  regression_report.md  security_report.md
.github/workflows/: benchmark.yml  build-release.yml  ci-loongarch.yml  ci-riscv64.yml  pages.yml  release.yml  rust-native-ci.yml
cli/: Cargo.toml
cod-ui/: Cargo.toml
cod-ui/src/: main.rs
docs/: index.md
extensions/: CONTRIBUTING.md
extensions/css-language-features/: CONTRIBUTING.md  README.md
extensions/emmet/: CONTRIBUTING.md  README.md
extensions/grunt/: package.json
extensions/html-language-features/: CONTRIBUTING.md  README.md
extensions/json-language-features/: CONTRIBUTING.md
extensions/json-language-features/server/: README.md
extensions/notebook-renderers/: package.json
extensions/ollama/: package.json  tsconfig.json
extensions/references-view/: README.md
extensions/theme-defaults/: package.json
extensions/theme-seti/: CONTRIBUTING.md
native/: Cargo.toml  index.d.ts  package.json
native/benches/: render.rs  tokenize.rs
native/src/: color.rs  diff.rs  encoding.rs  fuzzy.rs  hash.rs  jsonc.rs  lib.rs  render.rs  search.rs  text_layout.rs  tokenize.rs  treesitter.rs  watcher.rs  welcome.rs
native/tests/: render_test.rs  tokenize_test.rs  treesitter_test.rs  watcher_test.rs
native/tests/fixtures/: sample.json  sample.py  sample.rs  sample.ts
remote/: package-lock.json  package.json
resources/darwin/: code.icns
resources/server/: manifest.json
resources/win32/: VisualElementsManifest.xml
scripts/: build-installer.bat  build-installer.ps1  launch.cmd
site/: DESIGN.md  build.mjs  package-lock.json  package.json  tsconfig.json
site/src/: index.html  main.ts  style.css
src/: main.ts
src/vs/base/common/: buffer.ts  (+5 more)
test/sanity/: README.md
test/smoke/: Audit.md
(+51 files in other folders)
