[package]
name = "cod-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"
rayon = "1"
globset = "0.4"
rustybuzz = "0.14"
ttf-parser = "0.21"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-json = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-css = "0.21"
tree-sitter-bash = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.22"
notify = "8.2.0"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tokenize"
harness = false

[[bench]]
name = "render"
harness = false

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
